<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjetoMainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:text="@string/cilindrada"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:text="@string/CO2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/CilindradaGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="312dp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <RadioButton
                    android:id="@+id/radioButtonCil1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cil1" />

                <RadioButton
                    android:id="@+id/radioButtonCil2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cil2" />

                <RadioButton
                    android:id="@+id/radioButtonCil3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cil3" />

                <RadioButton
                    android:id="@+id/radioButtonCil4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cil4" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/CO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonEm1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Em1" />

                <RadioButton
                    android:id="@+id/radioButtonEm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Em2" />

                <RadioButton
                    android:id="@+id/radioButtonEm3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Em3" />

                <RadioButton
                    android:id="@+id/radioButtonEm4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Em4" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:text=" "
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="477dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Calcular"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="459dp" />

</android.support.constraint.ConstraintLayout>